# bazel-typescript

./: .bazelignore  .bazelrc  .gitignore  .npmrc  BUILD  BUILD_AND_DEPLOY.md  LICENSE  MODULE.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build-and-deploy.yml  deploy.yml
apps/web/: BUILD  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/components/: Greeting.tsx
apps/web/src/app/styles/: globals.css
scripts/: pre-push-check.sh
src/: BUILD  hello.ts  index.html  index.ts  index.tsx  styles.css  tsconfig.json
src/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  export-detail.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
src/.next/cache/webpack/client-production/: 1.pack  2.pack  index.pack  index.pack.old
src/.next/cache/webpack/edge-server-production/: index.pack
src/.next/cache/webpack/server-production/: index.pack
src/.next/server/: server-reference-manifest.json
src/.next/server/app/: index.html  index.rsc  page.js.nft.json
src/.next/server/app/_not-found/: index.rsc  page.js.nft.json
src/.next/server/pages/: 404.html  500.html  _app.js.nft.json  _document.js.nft.json  _error.js.nft.json
src/.next/static/css/: 97e6f60b938adc42.css
src/.next/types/app/: layout.ts  page.ts
src/components/: App.tsx  Greeting.tsx
src/components/common/: Button.tsx
