###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "bazel-typescript-monorepo",
    version = "1.0.0",
)

bazel_dep(name = "aspect_rules_js", version = "1.38.0")
bazel_dep(name = "aspect_rules_ts", version = "2.1.1")
bazel_dep(name = "aspect_rules_swc", version = "1.1.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.5.1")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
    npmrc = "//:.npmrc",
    data = [
        "//:package.json",
        "//apps/web:package.json",
    ],
    public_hoist_packages = {
        # Hoist Next.js packages to root to avoid duplicate installations
        "next": [""],
        "@next/env": [""],
        "react": [""],
        "react-dom": [""],
    },
)
use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

rules_swc_ext = use_extension(
    "@aspect_rules_swc//swc:extensions.bzl",
    "ext",
)
rules_swc_ext.swc_register()
